<resources>
    <string name="app_name">desertOrderingApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--  defined tags.  -->
    <string name="intro_text">Droid Dessert</string>
    <string name="donald_image_des">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_des">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo_des">FroYo is premium self-serve frozen yogurt.</string>

    <string name="donald_order">You have Ordered a Donald.</string>
    <string name="ice_cream_order">You have Ordered A ice Cream.</string>
    <string name="froyo_order">You have Ordered A Froyo.</string>


    <!--  for input text.  -->
    <string name="name_label">Name </string>
    <string name="hint_name_label">Enter your Names</string>
    <string name="address_label">Address </string>
    <string name="hint_address_label">Enter you Address</string>
    <string name="phone_label">Phone</string>
    <string name="hint_label_phone">Enter Phone Numbers</string>
    <string name="note_label">Note : </string>
    <string name="hint_note">Enter Some Note</string>
    <string name="choose_radio_button_label">Choose a delivery Method</string>

    <string name="same_day">Same Day Delivery</string>
    <string name="next_day">Next day Ground Delivery</string>
    <string name="pick_up">Pick up</string>

</resources>